# advent-of-code

./: .gitignore  README.md
2015/Day1_NotQuiteLisp/: README.md
2015/Day1_NotQuiteLisp/cpp/not_quite_lisp/: CMakeLists.txt  main.cpp
2015/Day1_NotQuiteLisp/python/not_quite_lisp/: main.py
2015/Day1_NotQuiteLisp/rust/not_quite_lisp/: Cargo.toml
2015/Day1_NotQuiteLisp/rust/not_quite_lisp/src/: main.rs
2018/Day1_ChronalCalibration/cpp/chronal_calibration/: CMakeLists.txt  main.cpp
2018/Day1_ChronalCalibration/python/chronal_calibration/: main.py
2018/Day1_ChronalCalibration/rust/chronal_calibration/: Cargo.toml
2018/Day1_ChronalCalibration/rust/chronal_calibration/src/: main.rs
2018/Day2_InventoryManagementSystem/cpp/inventory_management_system/: CMakeLists.txt  main.cpp
2018/Day2_InventoryManagementSystem/python/inventory_management_system/: main.py
2018/Day2_InventoryManagementSystem/rust/inventory_management_system/: Cargo.toml
2018/Day2_InventoryManagementSystem/rust/inventory_management_system/src/: main.rs
2018/Day3_NoMatterHowYouSliceIt/cpp/no_matter_how_you_slice_it/: CMakeLists.txt  main.cpp
2018/Day3_NoMatterHowYouSliceIt/python/no_matter_how_you_slice_it/: main.py
2018/Day3_NoMatterHowYouSliceIt/rust/no_matter_how_you_slice_it/: Cargo.toml
2018/Day3_NoMatterHowYouSliceIt/rust/no_matter_how_you_slice_it/src/: main.rs
2018/Day9_MarbleMania/cpp/marble_mania/: CMakeLists.txt  main.cpp
2018/Day9_MarbleMania/python/marble_mania/: main.py
2018/Day9_MarbleMania/rust/marble_mania/: Cargo.toml
(+1 files in other folders)
