[package]
name = "no_matter_how_you_slice_it"
version = "0.1.0"
authors = ["Alexandre Léonard <alexandre.leonard@kapsch.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"
regex = "1.3.9"
